--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <td>10</td>
                             <td>3</td>
                             <td>
-                                <!--Button for deleting row-->
+                                <!--Buttons for deleting and editing row-->
                                 <a href="#" class="btn btn-warning btn-sm edit">Edit</a>
                                 <a href="#" class="btn btn-danger btn-sm delete">Delete</a>
                             </td>
